...
    var flightDisplay = [FlightDataInformation]()
    var estimatedList = [String]()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        navigationItem.leftBarButtonItem = UIBarButtonItem(title: "Back", style: .plain, target: self, action: #selector(handleBackButton))
        navigationItem.title = "Flight Information Detail"
        tableView.register(FlightDisplayCell.self, forCellReuseIdentifier: cellID)
        tableView.reloadData()
        fetchFlightData()

    }
    override func viewWillAppear(_ animated: Bool) {
...
